Refactor: Melhora a validação e extração de token - Adicionado um método `getSecret()` na classe `TokenService` para fornecer acesso à chave secreta usada para assinar e validar os tokens JWT. - Atualizou o `JwtAuthenticationFilter` para usar diretamente o método `getSecret()` ao validar o token JWT, em vez de acessar a propriedade da chave secreta diretamente. - Melhorado o método `recuperarToken()` no `JwtAuthenticationFilter` para extrair corretamente o token JWT do cabeçalho `Authorization`, verificando o prefixo "Bearer ". - Removido o campo estático `chaveSecreta` da classe `TokenService`, e agora uso diretamente a propriedade da chave secreta para assinar e validar os tokens.
Essas alterações ajudam a garantir uma implementação mais robusta e segura do gerenciamento de tokens JWT no aplicativo.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,5 @@ spring.flyway.enabled=false
 spring.flyway.locations=classpath:db/migration
 spring.flyway.baselineOnMigrate=true
 
-jwt.secret=gXv@AwX!:PcQ1TvE|Se40eQY*$3sp}
+jwt.secret=21h46zaU6PQ1U5NYf/avsmTnAykZEu9XAK6Y8OQbsJU=
 jwt.expiration=86400000
