Fix: Aprimorar ContaReceberDTO e serviço para maior flexibilidade
     - Adicionado campo opcional 'usuarioId' em ContaReceberDTO
     - Atualizado ContaReceberService para aceitar tanto usuarioId quanto usuarioDTO
     - Implementado método fromUsuario em UsuarioDTO para conversão de entidade para DTO
     - Ajustado ContaReceberController para validar informações do usuário
     - Mantida compatibilidade com código existente enquanto permite novo formato JSON

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.flyway.baselineOnMigrate=true
 
 jwt.secret=21h46zaU6PQ1U5NYf/avsmTnAykZEu9XAK6Y8OQbsJU=
 jwt.expiration=86400000
+
+logging.level.org.springframework.security=DEBUG
