--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,12 +4,14 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/db_financeiro_home
 spring.datasource.username=postgres
 spring.datasource.password=admin
 
-spring.jpa.hibernate.ddl-auto= none
-spring.flyway.enabled=false
+spring.jpa.hibernate.ddl-auto=none
+spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
-spring.flyway.baselineOnMigrate=true
+spring.flyway.validate-on-migrate=true
+logging.level.org.flywaydb=DEBUG
 
 jwt.secret=21h46zaU6PQ1U5NYf/avsmTnAykZEu9XAK6Y8OQbsJU=
 jwt.expiration=86400000
 
 logging.level.org.springframework.security=DEBUG
+
