feat(infraestrutura): adiciona configuração Docker
- Adiciona Dockerfile com build multi-stage para otimização
- Configura docker-compose com serviço PostgreSQL
- Implementa suporte às migrações Flyway no ambiente Docker
- Adiciona verificação de saúde para o serviço de banco de dados
- Configura rede e volume para persistência de dados

Esta alteração adiciona suporte Docker ao projeto, permitindo a
implantação containerizada tanto da aplicação Spring Boot quanto
do banco de dados PostgreSQL. A configuração inclui orquestração
adequada dos serviços, garantindo que o banco de dados esteja
pronto antes da inicialização da aplicação e execução automática
das migrações Flyway.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,18 @@
 spring.application.name=financeiro-home
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_financeiro_home
-spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO}
 
-spring.jpa.hibernate.ddl-auto=none
+
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 spring.flyway.validate-on-migrate=true
+spring.flyway.clean-disabled=false
 logging.level.org.flywaydb=DEBUG
 
 jwt.secret=21h46zaU6PQ1U5NYf/avsmTnAykZEu9XAK6Y8OQbsJU=
 jwt.expiration=86400000
 
 logging.level.org.springframework.security=DEBUG
-
