fix: corrigir associação de cartões de crédito ao usuário autenticado
- Implementado o uso do método getUsuarioAutenticado() no endpoint de criação de cartões de crédito.
- Garantido que o ID do usuário autenticado seja atribuído corretamente ao CartaoCreditoDTO.
- Adicionado tratamento de erros para casos de usuário não autenticado ou não encontrado.
- Melhorada a validação manual do DTO para retorno de mensagens de erro mais claras.
- Incluídos logs e tratamento de exceções para melhor rastreamento de problemas.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
-
+.idea/
+*.iml
+*.iws
+*.ipr
 .mvn
 .gradle
 target
@@ -6,9 +9,6 @@ build
 out
 .idea
 .vscode
-*.iml
-*.ipr
-*.iws
 .DS_Store
 .classpath
 .factorypath
