--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,9 @@ spring.flyway.validate-on-migrate=true
 spring.flyway.clean-disabled=false
 logging.level.org.flywaydb=DEBUG
 
+
 jwt.secret=21h46zaU6PQ1U5NYf/avsmTnAykZEu9XAK6Y8OQbsJU=
 jwt.expiration=86400000
 
 logging.level.org.springframework.security=DEBUG
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
