--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,5 @@ jwt.expiration=86400000
 
 logging.level.org.springframework.security=DEBUG
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+
+spring.jackson.deserialization.use-big-decimal-for-floats=true
