fix: corrige constraint de status_parcelas e adiciona validação básica, adciona colunas na tabela relatorios_financeiros, relatorios_financeiros_itens e na tabela contas
- Removeu a constraint `chk_status_transition` que utilizava subconsultas, não suportadas pelo PostgreSQL em constraints `CHECK`.
- Adicionou a constraint `chk_status_valido` para garantir que apenas os valores 'pendente', 'paga' e 'cancelada' sejam aceitos no campo `status`.
- Adicionou comentários para documentar a tabela `status_parcelas` e seus campos.
- Criou um índice `idx_status_parcelas_parcela_id` para melhorar o desempenho de consultas por `parcela_id`.

A validação das transições de status será implementada na camada de aplicação em um próximo passo."

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO}
 
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
 
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
