--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,18 +17,21 @@ services:
     image: postgres:15-alpine
     container_name: postgres-db
     environment:
-      POSTGRES_DB: financeiroHome_db
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: admin
-    ports:
-      - "5433:5432"
+      - POSTGRES_DB=financeiroHome_db
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=admin
+      # Adicionando esta variável para criar o usuário postgres como superuser
+      - POSTGRES_HOST_AUTH_METHOD=trust
+    command: postgres -c 'max_connections=50'
     volumes:
-      - ./.data/postgresql/data:/var/lib/postgresql/data
+      - postgres-data:/var/lib/postgresql/data
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U postgres" ]
       interval: 10s
       timeout: 5s
       retries: 5
+    ports:
+      - "5433:5432"
     networks:
       - dev-network
   # ====================================================================================================================
