--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,7 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
+			<optional>true</optional>
 			<version>1.18.26</version>
 			<scope>provided</scope>
 		</dependency>
