fix: adiciona totalComprasAbertas na conversão para CartaoCreditoResponse. - Corrige a conversão da entidade CartaoCredito para CartaoCreditoResponse, garantindo que o campo totalComprasAbertas seja corretamente incluído na resposta da API.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,5 @@ logging.level.org.springframework.security=DEBUG
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 
 spring.jackson.deserialization.use-big-decimal-for-floats=true
+
+spring.jackson.property-naming-strategy=SNAKE_CASE
